ignore config.ini file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # lines starting with cardinal(#) are comments! 
 
 ## uncomment to ignore private file 👀
-#config.ini
+config.ini
 
 # tmp files
 .gitignore.bak
